--- a/paginas/contato.html
+++ b/paginas/contato.html
@@ -30,7 +30,7 @@
             <h1>FALE CONOSCO</h1>
             <p>
                 <label for="idNome">Nome:</label>
-                <input type="text" name="nome" id="idNome" placeholder="InCristinaforme seu Nome" maxlength="100">
+                <input type="text" name="nome" id="idNome" placeholder="Informe seu Nome" maxlength="100">
                 <span id="spanNome"></span>
             </p>
             <p>
