--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Cabin+Condensed:700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/fooder.css">
     <link rel="shortcut icon" href="./img/logo-agrovida.png" type="image/x-icon">
     <script src="./js/footer.js" defer></script>
-    <script src="./js/index.js" defer></script>
+    <script src="js/index.js" defer></script>
     <title>Agrinho</title>
 </head>
 <body>
